# fireworks

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  index.html
.github/workflows/: deploy.yml
src/: lib.rs
